prevent input zoom on mobile

--- a/css/form-lead.css
+++ b/css/form-lead.css
@@ -92,3 +92,9 @@
   margin-left: auto;
   margin-right: auto
 }
+
+@media (max-width: 500px) {
+  .form-lead form input {
+    font-size: 16px;
+  }
+}
